# three-sphere

./: CHANGELOG.md  LICENSE  README.md  three-sphere.cabal
src/: Main.hs  Polytopes.hs  Quaternion.hs
