cabal-version:       2.2
name:                three-sphere
version:             0.1.0.0
synopsis:            Graphical visualization of geometry in a 3-sphere
-- description:
bug-reports:         https://github.com/brianhuffman/three-sphere
license:             BSD-3-Clause
license-file:        LICENSE
author:              Brian Huffman
maintainer:          huffman@galois.com
copyright:           Brian Huffman, 2013-2019
category:            Graphics
extra-source-files:  CHANGELOG.md, README.md


executable three-sphere
  main-is:             Main.hs

  other-modules:       Quaternion
                       Polytopes

  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.11.1.0,
                       gloss,

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
